# python-project-50

./: .coverage  .gitignore  Makefile  Makefile.md  README.md  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: my-check.yml  python-ci.yml
diff_generator/: arg_parser.py  diff_tool.py  formatter.py
diff_generator/formatters/: stylish_formatter.py
diff_generator/scripts/: __main__.py  arg_parser.py  gendiff.py
gendiff/: __init__.py  arg_parser.py  diff_tool.py  gendif.py  gendiff_cli.py  gendiff_pac.py
gendiff/formatters/: plain_formatter.py  to_json_formatter.py
gendiff/scripts/: gendiff.py
tests/: test_diff_tool.py  test_formatter.py  test_gendiff.py  test_parser.py  test_to_json_formatter.py
